--- a/i3/config
+++ b/i3/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+# font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -168,10 +168,36 @@ bar {
 }
 
 # autostart
+# exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
+exec xrandr --dpi 200
+exec --no-startup-id /usr/bin/mate-settings-daemon 
 exec nm-applet
+exec blueman-applet
 
 # audio
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2.5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2.5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+# Screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+
+# Touchpad
+# exec xinput set-prop 13 289 1     # Natural Scrolling Enabled
+# exec xinput set-prop 13 279 1     # Tapping enabled
+# exec xinput set-prop 13 297 {1 1} # Click Method Enabled
+
+# Screensaver
+bindsym $mod+m exec "gnome-screensaver-command -l"
+# exec --no-startup-id xautolock -time 10 -locker "gnome-screensaver-command -l"
+exec --no-startup-id xautolock -detectsleep -locker 'gnome-screensaver-command -l'
+
+# Power management
+exec --no-startup-id xset dpms 630 660 900
+exec --no-startup-id xset s 600
+exec --no-startup-id xset s blank
+
+# Move workspace
+bindsym $mod+Mod1+Shift+l move workspace to output right
+bindsym $mod+Mod1+Shift+h move workspace to output left
