--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,10 +43,10 @@ set -g escape-time 10
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 unbind C-b
-
+ 
 # use C-b for remote sessions
-bind-key -n C-b send-prefix
-
+bind-key -n C-b send-keys C-b
+ 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
