--- a/i3/config
+++ b/i3/config
@@ -143,10 +143,10 @@ mode "resize" {
         # bindsym k resize grow height 10 px or 10 ppt
         # bindsym l resize shrink height 10 px or 10 ppt
         # bindsym semicolon resize grow width 10 px or 10 ppt
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym l resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym h resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -168,7 +168,7 @@ bar {
 }
 
 # autostart
-# exec blueman-applet
+exec blueman-applet
 exec nm-applet
 exec autorandr --change
 
