Update nvim/tmux for sway

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,13 @@
 # Terminal colors
 set -g default-terminal "tmux-256color"
 
+# Stop autorename of windows
+set allow-rename off
+# set-option -g allow-rename off
+
 # copy to system clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
@@ -23,6 +28,10 @@ bind l select-pane -R
 # moving between windows with vim movement keys
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+# move windows with vim keys
+bind -r h swap-window -t -1
+bind -r l swap-window -t +1
 
 # move panes with vim keys
 unbind L  # Default switch-client -L
