--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,13 +1,13 @@
 # Terminal colors
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 
 # Stop autorename of windows
-set allow-rename off
+# set allow-rename off
 # set-option -g allow-rename off
 
 # copy to system clipboard
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
