Update all changes files that I think I'm using

--- a/taswarrior/.taskrc
+++ b/taswarrior/.taskrc
@@ -1,16 +1,46 @@
+# [Created by task 2.5.1 8/10/2019 20:22:00]
+# Taskwarrior program configuration file.
+# For more documentation, see http://taskwarrior.org or try 'man task', 'man task-color',
+# 'man task-sync' or 'man taskrc'
+
+# Here is an example of entries that use the default, override and blank values
+#   variable=foo   -- By specifying a value, this overrides the default
+#   variable=      -- By specifying no value, this means no default
+#   #variable=foo  -- By commenting out the line, or deleting it, this uses the default
+
+# Use the command 'task show' to see all defaults and overrides
+
+# Files
+data.location=~/.task
+
+# Color theme (uncomment one to use)
+#include /usr/share/taskwarrior/light-16.theme
+#include /usr/share/taskwarrior/light-256.theme
+#include /usr/share/taskwarrior/dark-16.theme
+#include /usr/share/taskwarrior/dark-256.theme
+#include /usr/share/taskwarrior/dark-red-256.theme
+#include /usr/share/taskwarrior/dark-green-256.theme
+#include /usr/share/taskwarrior/dark-blue-256.theme
+#include /usr/share/taskwarrior/dark-violets-256.theme
+#include /usr/share/taskwarrior/dark-yellow-green.theme
+#include /usr/share/taskwarrior/dark-gray-256.theme
+#include /usr/share/taskwarrior/dark-gray-blue-256.theme
+#include /usr/share/taskwarrior/solarized-dark-256.theme
+#include /usr/share/taskwarrior/solarized-light-256.theme
+#include /usr/share/taskwarrior/no-color.theme
+
 # Reports
 report.in.columns = id,description
 report.in.description = Inbox
 report.in.filter = status:pending limit:page (+in)
 report.in.labels = ID,Description
+report.list.sort = start-,due+,urgency-
 
 # Misc
 search.case.sensitive=no
 
 # Context
 context.work=+work or +meeting
-context.hobby=(+charming or +lab or +in) and -work
-context=hobby
 
 # Urgency
 urgency.age.coefficient=0.0
@@ -20,3 +50,12 @@ urgency.project.coefficient=0.0
 urgency.inherit=1
 urgency.blocking.coefficient=0.0
 # urgency.blocked.coefficient=0.0
+
+taskd.certificate=\/home\/chris\/.task\/default_chris.cert.pem
+taskd.key=\/home\/chris\/.task\/default_chris.key.pem
+taskd.ca=\/home\/chris\/.task\/ca.cert.pem
+taskd.server=zarek.cc:53589
+taskd.credentials=default\/chris\/88a401b5-5e18-4eaf-a544-b6a7c3d05444
+report.all.sort=end-
+context.home=-work
+context=work
