--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
-# Terminal colors
-# set -g default-terminal "tmux-256color"
+# Terminal colors (recommend by deopelete)
+set -g default-terminal "tmux-256color"
+set-option -g default-terminal "screen-256color"
 
 # Stop autorename of windows
 # set allow-rename off
@@ -30,8 +31,9 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # move windows with vim keys
-bind -r h swap-window -t -1
-bind -r l swap-window -t +1
+# This seems to prevent the window update for some reason
+# bind -r C-H swap-window -t -1
+# bind -r C-L swap-window -t +1
 
 # move panes with vim keys
 unbind L  # Default switch-client -L
