Add local .snips to coc-snips

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -17,6 +17,10 @@
     "default": true,
     "line_length": false
   },
+  "snippets.ultisnips.directories": [
+  "UltiSnips",
+  "$PWD/.snips"
+  ],
   "cSpell.userWords": [
     "Kubernetes"
   ]
