Setup import hotkey and use gofumpt

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,6 +3,9 @@
   "suggest.invalidInsertCharacters": [],
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": true,
+  "go.goplsOptions": {
+    "formatting.gofumpt": true
+  },
 
   "languageserver": {
     "zk": {
