enable yaml formatting

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -6,6 +6,7 @@
   "go.goplsOptions": {
     "formatting.gofumpt": true
   },
+  "yaml.format.enable": true,
   "languageserver": {
     "zk": {
       "command": "zk",
