nvim updates for completion changes

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -6,6 +6,10 @@
   "go.goplsOptions": {
     "formatting.gofumpt": true
   },
+  //"go.goplsArgs": [
+  //  "-logfile=/tmp/gopls.log",
+  //  "-vv"
+  //],
   "yaml.format.enable": true,
   "languageserver": {
     "zk": {
