update tmux format

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,10 +37,10 @@ bind -r C-l select-window -t :+
 
 # move panes with vim keys
 unbind L  # Default switch-client -L
-bind H swap-pane -s {left-of}
-bind J swap-pane -s {down-of}
-bind K swap-pane -s {up-of}
-bind L swap-pane -s {right-of}
+bind H swap-pane -s "left-of"
+bind J swap-pane -s "down-of"
+bind K swap-pane -s "up-of"
+bind L swap-pane -s "right-of"
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
