--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,12 @@ set-option -g default-terminal "screen-256color"
 # set-option -g allow-rename off
 
 # copy to system clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+# For Non-SWAY?
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+# For SWAY
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+bind-key -T prefix p run "wl-paste | tmux load-buffer - ; tmux paste-buffer"
+bind-key -n C-v paste-buffer
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
