--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set-option -g default-terminal "screen-256color"
 # For SWAY
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key -T prefix p run "wl-paste | tmux load-buffer - ; tmux paste-buffer"
-bind-key -n C-v paste-buffer
+# bind-key -n C-v paste-buffer # Disabled b/c it conflicts with vim
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
